--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
     "npm": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-paper": "^5.10.6",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
