--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "install": "^0.13.0",
+    "lottie-react-native": "^6.6.0",
     "moment": "^2.30.1",
-    "npm": "^10.1.0",
+    "npm": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -28,7 +30,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^14.1.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
