--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "moment": "^2.30.1",
-    "npm": "^10.4.0",
+    "npm": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-month-picker": "^1.0.1",
     "react-native-month-year-picker": "^1.9.0",
     "react-native-paper": "^5.10.6",
     "react-native-progress": "^5.0.1",
@@ -39,6 +42,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
