--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
