--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "moment": "^2.30.1",
@@ -29,7 +30,10 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.4",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.3",
     "rn-fetch-blob": "^0.12.0"
